--- a/views/table-mhs.html
+++ b/views/table-mhs.html
@@ -273,6 +273,9 @@ body.dark-theme .border-gray-200 {
                 Swal.fire({
                     icon: 'error',
                     title: 'Error',
+                    imageUrl: './img/error2.jpg',
+                    imageWidth: 200,  
+                    imageHeight: 'auto',
                     text: 'Gagal memuat data tugas!'
                 });
                 allTugas = []; 
