--- a/views/index.html
+++ b/views/index.html
@@ -681,8 +681,7 @@
                 if (token) {
                      Swal.fire({
                         icon: 'success',
-                        title: 'Berhasil',
-                        text: 'Akses diterima!',
+                        title: 'Berhasil Masuk!',
                         timer: 1500, 
                         imageUrl: './img/Good.jpg',
                         imageWidth: 200,  
