update sisi user

--- a/views/editor-tugas.html
+++ b/views/editor-tugas.html
@@ -325,7 +325,7 @@
             if (!checkIds.some(id => document.getElementById(id).checked)) {
                 return Swal.fire({
                 // title: 'Hapus User?',
-                text: `Pilih minimal satu kategori!`,
+                text: `Pilih minimal satu kategori di tugas nya!`,
                 // icon: 'warning',
                 imageUrl: './img/angry.webp',
                 imageWidth: 200,  
