--- a/views/index.html
+++ b/views/index.html
@@ -130,7 +130,7 @@
         #Clock {
             font-size: 1.2rem;
             margin-top: 10px;
-            color: var(--primary-color);
+            color: white;
         }
 
         table {
