fix user dashbaord + docker

--- a/views/index.html
+++ b/views/index.html
@@ -565,7 +565,7 @@
         </div>
         
     </div> <footer class="footer-bottom">
-        <p>&copy; 2026 3KA14 REMINDER WEB | <a href="https://github.com/DanaPutra133" target="_blank">GitHub Profile</a></p>
+        <p>&copy; 2026 3KA14 REMINDER WEB | <a href="https://github.com/DanaPutra133/ka14_Management-task" target="_blank">GitHub Source Code</a></p>
     </footer>
 
     <script>
